# cuml-bindings

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-app.yml  rust.yml
docker/: Dockerfile
go/: agglomerative_clustering.go  agglomerative_clustering_test.go  cuml.go  dbscan.go  dbscan_test.go  fil.go  fil_test.go  go.mod  go.sum  kmeans.go  kmeans_test.go  linear_regression.go  linear_regression_test.go  log_level.go  metric.go  tool_test.go
go/rawcuml4go/: agglomerative_clustering.go  dbscan.go  device_memory.go  device_resource.go  device_vector.go  fil.go  fil_test.go  kmeans.go  linear_regression.go  linear_regression_test.go  tool_test.go
go/testdata/: feature.csv  label.csv  main.py  requirements.txt  score-treelite.csv  score-xgboost.csv  xgboost.model
include/cuml4c/: agglomerative_clustering.h  dbscan.h  device_resource_handle.h  device_vector.h  fil.h  kmeans.h  linear_regression.h  memory_resource.h
rust/: Cargo.toml  build.rs
rust/src/: clustering.rs  errors.rs  fil.rs  lib.rs  linear_regression.rs  log_level.rs  metric.rs
rust/src/sys/: bindings.rs  clustering.rs  device_resource.rs  device_vector.rs  fil.rs  linear_regression.rs  memory_resource.rs  mod.rs
src/: CMakeLists.txt  agglomerative_clustering.cu  async_utils.cuh  cuda_utils.cu  cuda_utils.h  dbscan.cu  device_allocator.cu  device_allocator.h  device_resource_handle.cu  device_resource_handle.cuh  device_vector.cu  device_vector_utils.h  fil.cu  fil_utils.cu  fil_utils.h  handle_utils.cu  handle_utils.h  kmeans.cu  linear_regression.cu  memory_resource.cu  pinned_host_vector.h  preprocessor.h  stream_allocator.cu  stream_allocator.h  treelite_utils.cuh  unique_marker.cuh
testdata/: annotation.json  label.csv  main.py  requirements.txt  score-treelite.csv  score-xgboost.csv  xgboost.json  xgboost.model
tests/: CMakeLists.txt  clustering_test.cpp  fil_test.cpp  linear_regression_test.cpp  memory_resource_test.cpp
